--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@langchain/community": "^0.0.56",
     "@langchain/openai": "^0.0.28",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "langchain": "^0.1.37",
